<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MeetUp</string>
    <string name="hello">Hello!</string>
    <string name="get_posts">Get posts</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Password</string>
    <string name="enter_phone_number_or_email">Phone number or email</string>
    <string name="search">search</string>
    <string name="content_description_search">search_chats_or_meetings</string>
    <string name="add_message">Add message</string>
    <string name="some_name">Mikhail Trishin</string>
    <string name="some_message">last message in the chat</string>
    <string name="add_meeting">add_meeting</string>
    <string name="some_meeting_name">Собрание андроид-разработчиков</string>
    <string name="some_date_and_time">14 марта 2021 12:30</string>
    <string name="contacts">Contacts</string>
    <string name="invite_people">Invite people</string>
    <string name="calendar">Calendar</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="about_us">About us</string>
    <string name="communicate">Communicate</string>
    <string name="some_phone_number" tools:ignore="TypographyDashes">+7 (962) 690–60-42</string>
    <string name="chats">Chats</string>
    <string name="meeting">MeetUps</string>
    <string name="delete">Delete</string>
    <string name="content_description_delete">delete</string>
    <string name="select_all">select all items</string>
    <string name="content_description_share">select all items</string>
    <string name="chats_is_empty">Messages is empty.</string>
    <string name="meetings_is_empty">MeetUps is empty.</string>
    <string name="chat_avatar">chat avatar</string>
    <string name="meeting_avatar">meeting avatar</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="add_phone_number">add phone number</string>
    <string name="enter_phone_code">Enter code from sms</string>
    <string name="contacts_is_empty">Contacts is empty</string>
    <string name="check_item">check item</string>
    <string name="online">online</string>
    <string name="more_actions">more actions</string>
    <string name="message">Message</string>
    <string name="send_message">send message</string>
    <string name="user_avatar">user avatar</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="todo">TODO</string>
    <string name="meetingName">Name for meeting</string>
    <string name="exit_app">Exit</string>
</resources>