<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invite_people"
            android:icon="@drawable/ic_person_add_24"
            android:title="@string/invite_people" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_person_24"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_bookmark_border_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_today_24"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/exit_app" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_help_outline_24"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>