<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/item_meeting"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatarMeeting"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/circe"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/meeting_avatar" />

        <TextView
            android:id="@+id/meetingNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:text="@string/some_meeting_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="@+id/checked"
            app:layout_constraintStart_toEndOf="@+id/avatarMeeting"
            app:layout_constraintTop_toTopOf="@+id/avatarMeeting" />

        <TextView
            android:id="@+id/textDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/some_date_and_time"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="@+id/meetingNameLayout"
            app:layout_constraintStart_toStartOf="@+id/meetingNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/meetingNameLayout" />

        <ImageView
            android:id="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_check_24"
            app:layout_constraintBottom_toBottomOf="@+id/textDateTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/meetingNameLayout"
            android:contentDescription="@string/check_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>