<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:menu="@menu/chat_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/avatarUser"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@drawable/circe"
                        android:contentDescription="@string/user_avatar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/browser_actions_bg_grey"
                        app:layout_constraintStart_toEndOf="@+id/avatarUser"
                        app:layout_constraintTop_toTopOf="@+id/avatarUser" />

                    <TextView
                        android:id="@+id/userStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/browser_actions_bg_grey"
                        app:layout_constraintBottom_toBottomOf="@+id/avatarUser"
                        app:layout_constraintStart_toStartOf="@+id/userName"
                        app:layout_constraintTop_toBottomOf="@+id/userName" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/purple_100"
            app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:listitem="@layout/item_message" />

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/message"
            android:inputType=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineAddMessage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/createMeeting" />

        <ImageView
            android:id="@+id/sendMessage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/send_message"
            android:src="@drawable/ic_baseline_send_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineAddMessage"
            app:layout_constraintTop_toBottomOf="@+id/messages_recycler_view"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/createMeeting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_baseline_group_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextMessage"
            app:tint="@color/black" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineAddMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottomSheetCoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomSheetContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_sheet_bg"
                app:behavior_hideable="true"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <ImageView
                    android:id="@+id/imageCloseBottomSheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_cancel_24"
                    app:layout_constraintEnd_toEndOf="@+id/meetingNameLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/meetingName"
                    app:endIconDrawable="@drawable/ic_baseline_edit_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageCloseBottomSheet">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputNameMeeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingNameEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/address"
                    app:endIconDrawable="@drawable/ic_baseline_add_location_alt_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/meetingNameLayout"
                    app:layout_constraintStart_toStartOf="@+id/meetingNameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/meetingNameLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageOpenCalendar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_calendar_today_24"
                    app:layout_constraintBottom_toBottomOf="@+id/imageAddTime"
                    app:layout_constraintStart_toEndOf="@+id/imageAddTime"
                    app:layout_constraintTop_toBottomOf="@+id/meetingNameEditText"
                    app:layout_constraintVertical_bias="1.0"
                    app:tint="@color/black" />

                <ImageView
                    android:id="@+id/imageAddTime"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_more_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/meetingNameEditText"
                    app:layout_constraintTop_toBottomOf="@+id/meetingNameEditText"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/addMeeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/add"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageAddTime"
                    app:layout_constraintEnd_toEndOf="@+id/meetingNameEditText"
                    app:layout_constraintTop_toTopOf="@+id/imageAddTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>